--- a/react-d'lish/src/lang/es/global.json
+++ b/react-d'lish/src/lang/es/global.json
@@ -68,6 +68,7 @@
         "category-lunch" : "Almuerzos",
         "category-complement-1" : "Complementos 1",
         "category-complement-2" : "Complementos 2",
+        "category-accompaniment" : "Acompañamientos",
         "category-drink" : "Bebidas",
         "best-dishes-title" : "Lo mas vendido"
     },
