--- a/react-d'lish/src/lang/en/global.json
+++ b/react-d'lish/src/lang/en/global.json
@@ -98,7 +98,8 @@
         "funds-title" : "Funds",
         "funds-subtitle" : "Pay with the funds in your account",
         "advice-funds-title" : "Your current funds are",
-        "advice-funds-subtitle" : "Otherwise, you will receive a penalty.",
+        "advice-funds-subtitle" : "Confirm payment with your funds below",
+        "advice-funds-subtitle-not-enough" : "Insufficient funds to pay",
         "cash-title" : "Cash",
         "cash-subtitle" : "Pay by going to the cafeteria.",
         "advice-cash-title" : "You acknowledge the responsibility to go to the cafeteria to claim and pay for your order.",
