--- a/react-d'lish/src/lang/es/global.json
+++ b/react-d'lish/src/lang/es/global.json
@@ -99,7 +99,8 @@
         "funds-title" : "Fondos",
         "funds-subtitle" : "Paga con los fondos de tu cuenta",
         "advice-funds-title" : "Tus fondos actuales son de",
-        "advice-funds-subtitle" : "En caso contrario, recibirás una penalización.",
+        "advice-funds-subtitle" : "Confirma el pago con tus fondos abajo",
+        "advice-funds-subtitle-not-enough" : "Fondos insuficientes para pagar",
         "cash-title" : "Efectivo",
         "cash-subtitle" : "Paga dirigiendote a la cafeteria",
         "advice-cash-title" : "Admites la responsabilidad para ir a la cafetería a reclamar y pagar tu pedido.",
